card layout bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 .notesGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
 }
